Created option 1 (Intent Service) activity.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/intent_service"
+                android:onClick="goToDownload"
                 android:tag="0"/>
 
         </LinearLayout>
